Fix overflow on page bottom

--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,7 @@ div.card {
 
 div.packagecontainer {
     position: relative;
+    overflow: hidden;
 }
 
 div.package {
